# website

./: 404.html  CNAME  DEPLOY.md  README.md  about.html  index.html  pyproject.toml  website.py
.github/workflows/: pages.yml
assets/css/: styles.css
blog/: hello-world.html  index.html  on-writing-to-think.html  why-this-blog.html
