[project]
name = "website"
version = "0.0.0"
description = "Local preview server for benbullough.co.uk"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
website = "website:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["website.py"]
